# lecture-summarization

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
lecture_summarization/: cli.py  summarize.py  transcribe.py
